--- a/buildpack.toml
+++ b/buildpack.toml
@@ -14,7 +14,7 @@
 
 [buildpack]
 id = "io.projectriff.command"
-name = "riff Command Buildpack"
+name = "Command Function Buildpack"
 version = "0.0.8-BUILD-SNAPSHOT"
 
 [[stacks]]
